# FARA

./: .gitignore  CMakeLists.txt  comp_resp.txt  db.cpp  db.h  globals.h  header.h  main.cpp  q.cpp  q.h
c5-24xlarge-results-NEW/accuracy/: 1048576rows_48threads_14bits.txt  131072rows_48threads_14bits.txt  262144rows_48threads_14bits.txt  32768rows_48threads_14bits.txt  524288rows_48threads_14bits.txt  65536rows_48threads_14bits.txt
c5-24xlarge-results-NEW/comparison_rescaletech/: 1572864rows_fixedmanual.txt  1572864rows_flexibleauto.txt
c5-24xlarge-results-NEW/latency/: 1048576rows_48threads_14bits.txt  12582912rows_24threads_14bits.txt  131072rows_48threads_14bits.txt  1572864rows_48threads_14bits.txt  262144rows_48threads_14bits.txt  3145728rows_48threads_14bits.txt  32768rows_48threads_14bits.txt  524288rows_48threads_14bits.txt  6291456rows_24threads_14bits.txt  65536rows_48threads_14bits.txt
c5-24xlarge-results-NEW/latency-single-thread/: 1048576rows_14bits.txt  131072rows_14bits.txt  262144rows_14bits.txt  32768rows_14bits.txt  524288rows_14bits.txt  65536rows_14bits.txt
c5-24xlarge-results-NEW/new_latency_error_tradeoff/: 1048576rows_48threads_14bits_FIXEMANUAL.txt  1048576rows_48threads_14bits_FLEXIBLEAUTO.txt  262144rows_48threads_14bits_FIXEMANUAL.txt  262144rows_48threads_14bits_FLEXIBLEAUTO.txt  32678rows_48threads_14bits_FIXEMANUAL.txt  32768rows_48threads_14bits_FLEXIBLEAUTO.txt
c5-24xlarge-results-NEW/new_relational_operators/: eq_16bits.txt  eq_32bits.txt  eq_4bits.txt  eq_64bits.txt  ineq_16bits.txt  ineq_32bits.txt  ineq_4bits.txt  ineq_64bits.txt
c5-24xlarge-results-NEW/new_single_threaded_results/: 1048576rows_14bits_fixedmanual.txt  131072rows_14bits_fixedmanual.txt  262144rows_14bits_fixedmanual.txt  32768rows_14bits_fixedmanual.txt  524288rows_14bits_fixedmanual.txt  65536rows_14bits_fixedmanual.txt
c5-24xlarge-results-NEW/super-accuracy-error/: 65536rows_48threads_14bits.txt
(+76 files in other folders)
